feat(archive): add SQLite hot history store